--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,6 @@ body {
   background-color: #222A27;
   display: flex;
   flex-wrap: wrap;
-  overflow: hidden;
 }
 
 header {
@@ -21,7 +20,7 @@ header {
   background-color: #4ed0a995;
   font-family: 'Font';
   font-size: 2vw;
-  margin-top:0.5em;
+  margin-top: 0.5em;
   z-index: 10000;
   color: white;
 }
@@ -169,7 +168,7 @@ header {
     font-size: 2.5vw;
   }
 
-  header a{
+  header a {
     margin-left: 1em;
   }
 
@@ -178,30 +177,30 @@ header {
     margin-left: 0;
   }
 
-  .cvPicture img{
+  .cvPicture img {
     height: auto;
     width: 45vw;
   }
 
-  .title{
+  .title {
     font-size: 5.4vw;
     margin: 0;
     margin-top: 4em;
     text-align: center;
   }
 
-  .bio{
+  .bio {
     margin-top: 0;
     font-size: 3.2vw;
   }
 
-  .medias{
+  .medias {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
   }
 
-  .medias img{
+  .medias img {
     margin: 0;
     margin-top: 4em;
     width: 15vw;
